generic team, revert to java17