@@ -1913,7 +1913,7 @@ public class WebSocketEventForwarder implements BreakDisplay, HasBoardMode, IUnr
 					pushUpdateDoIt(e2);
 					Thread.sleep(KEEPALIVE_INTERVAL);
 				} catch (InterruptedException e) {
-					logger.debug("thread {} interrupted", Thread.currentThread().threadId());
+					logger.debug("thread {} interrupted", Thread.currentThread().getId());
 					break;
 				}
 			}
