@@ -80,11 +80,11 @@ public class Translator implements I18NProvider {
 		} else {
 			String[] parts = localeString.split("_");
 			if (parts.length == 1) {
-				return Locale.of(parts[0]);
+				return new Locale(parts[0]);
 			} else if (parts.length == 2) {
-				return Locale.of(parts[0], parts[1]);
+				return new Locale(parts[0], parts[1]);
 			} else if (parts.length >= 3) {
-				return Locale.of(parts[0], parts[1], parts[2]);
+				return new Locale(parts[0], parts[1], parts[2]);
 			} else {
 				throwInvalidLocale(localeString);
 				return null; // unreacheable
